Maybe fixed issue on mobile of being able to horizontally scroll while on experiments page

--- a/css/index.css
+++ b/css/index.css
@@ -436,5 +436,7 @@ main section details {
 
     #message-wrapper {
         height: 60vh;
+        overflow-x: hidden;
+        width: 100%;
     }
 }
